2022-12-26: [FEATURE] Add decoration grouping to BorderDecorations
2022-12-25: [BUGFIX] Catch errors where `SnapCast` widget can't retrieve ID from server
2022-12-22: [FEATURE] Add `Syncthing` widget
2022-12-21: [BUGFIX] Fix issue redrawing controls after mouse focus change
2022-12-20: [FEATURE] Add `ProgressBarMixin` and convert `ALSAWidget` and `BrightnessControl` to use mixin
2022-12-19: [BUGFIX] Update `StravaWidget` to `stravalib v1.1.0` (NB new dependency `pint`)
2022-12-03: [FEATURE] Add extended popup to `Mpris2`
2022-12-02: [BUGFUX] Fix startup slowdown caused by `ALSAWidget` 
2022-12-02: [BUGHFIX] Fixed bug when drawing masked images with `Image` widget
2022-12-01: [FEATURE] Add ability to fine tune position of `AnalogueClock`
2022-11-29: [BUGFIX] Handle JSON error in `TVHWidget`
2022-11-26: [FEATURE] Add extended popup to `LiveFootballScores`
2022-11-24: [BUGFIX] Fix bug where decoration crashes on widget initialised inside a `WidgetBox`
2022-11-23: [FEATURE] Add extended popups to `ALSAWidget` and `BrightnessControl` (experimental)
2022-11-22: [FEATURE] Add ability to draw border in different colour in `RectDecoration`
2022-11-22: [BUGFIX] Fix `RectDecoration` grouping when not filled
2022-11-18: [FEATURE] Add support for web-based images in `PopupImage` and `Image` widget
2022-11-18: [FEATURE] Add ability to draw border on `PopupSlider` controls
2022-11-18: [FEATURE] Add `ExtendedPopupMixin` to simplify adding popups to widgets
2022-11-18: [FEATURE] Add `MenuMixin` and `DBusMenuMixin` to standardise approach to widget menus
2022-11-17: [FEATURE] Add HTTPDigest authentication to `TVHWidget`
2022-11-13: [FEATURE] Add ability to update popup control values
2022-11-12: [BUGFIX] Fix menu bug in `GlobalMenu`
2022-11-12: [FEATURE] `PopupImage` can display an alternative image as a highlight
2022-11-12: [BUGFIX] Fix away goal and red card indicator locations when using `PowerLineDecoration`
2022-11-12: [BUGFIX] More fixes to decorations on mirrored widgets